tests/baselines/reference/invalidUnicodeEscapeSequance.errors.txt
==== tests/cases/compiler/invalidUnicodeEscapeSequance.ts (2 errors) ====
    var arg\u003
           ~
!!! invalidUnicodeEscapeSequance.ts(1,8): error TS1001: Unexpected character "\".
           ~
!!! invalidUnicodeEscapeSequance.ts(1,8): error TS1005: ',' expected.